--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
+hyper = {version = "0.13.10"}
+tokio = {  version = "0.2", features = ["macros", "rt-threaded"]}
+serde = {version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-hyper = "0.14.28"
-tokio = "1.36.0"
-
-[[bin]]
-name = "llm_server"
-path = "src/main.rs"
+llm = { git = "https://github.com/rustformers/llm.git" }
+rand = "0.8.5"
+cargo_metadata = "0.18.1"
+anyhow = "1.0.79"
+toml = "0.5.8"
