--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ rand = "0.8.5"
 cargo_metadata = "0.18.1"
 anyhow = "1.0.79"
 toml = "0.5.8"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
